# vole

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RESEARCH_COMPLETE_SUMMARY.md  RESEARCH_INDEX.md  VIR_MIGRATION_TICKETS.md  justfile
crates/vole-codegen/: Cargo.toml
crates/vole-codegen/src/: analyzed.rs  calls.rs  context.rs  expr.rs  function_registry.rs  interface_vtable.rs  jit.rs  lambda.rs  lib.rs  method_resolution.rs  ops.rs  stmt.rs  types.rs  vtable_ctx.rs
crates/vole-codegen/src/compiler/: common.rs  context_factory.rs  impls.rs  mod.rs  program.rs  signatures.rs  state.rs  type_registry.rs
crates/vole-codegen/src/structs/: access.rs  helpers.rs  literals.rs  methods.rs  mod.rs
crates/vole-codegen/src/types/: codegen_ctx.rs  codegen_state.rs  compile_ctx.rs  compile_env.rs  conversions.rs  explicit_params.rs  function_ctx.rs  global_ctx.rs  mod.rs  type_ctx.rs
crates/vole-frontend/: Cargo.toml
crates/vole-frontend/src/: ast.rs  ast_display.rs  intern.rs  lexer.rs  lib.rs  parse_decl.rs  parse_external.rs  parse_lambda.rs  parse_stmt.rs  parse_string.rs  parse_type.rs  token.rs
crates/vole-frontend/src/errors/: parser.rs
crates/vole-frontend/src/parse_expr/: match_expr.rs  primary.rs
crates/vole-frontend/src/parser/: mod.rs  tests.rs
crates/vole-runtime/: Cargo.toml
crates/vole-runtime/src/: array.rs  assert.rs  builtins.rs  iterator.rs  lib.rs  native_registry.rs  type_registry.rs
crates/vole-runtime/src/stdlib/: collections.rs  math.rs  mod.rs
crates/vole-sema/: Cargo.toml
crates/vole-sema/src/: analysis_cache.rs  compilation_db.rs  entity_defs.rs  expression_data.rs  generic.rs  implement_registry.rs  lib.rs  program_update.rs  query.rs  resolution.rs  resolve.rs  scope.rs  type_arena.rs  type_display.rs  well_known.rs
crates/vole-sema/src/analyzer/: builtins.rs  declarations.rs  errors.rs  inference.rs  lambda.rs  mod.rs  patterns.rs  prelude.rs  stmt.rs  tests.rs  type_helpers.rs
crates/vole-sema/src/analyzer/expr/: access.rs  assign.rs  (+5 more)
crates/vole-sema/src/compatibility/: core.rs
crates/vole-sema/src/entity_registry/: fields.rs  functions.rs  globals.rs  methods.rs  mod.rs  types.rs
crates/vole-sema/src/errors/: mod.rs
crates/vole-sema/src/module/: loader.rs  locator.rs  mod.rs
crates/vole-sema/src/types/: mod.rs  primitive.rs  special.rs
src/crates/vole-codegen/: Cargo.toml
src/crates/vole-codegen/src/: analyzed.rs  analyzed_lower_annotation_inits.rs  analyzed_lower_entity_metadata.rs  analyzed_lower_field_default_inits.rs  analyzed_lower_function_default_inits.rs  analyzed_lower_functions.rs  analyzed_lower_global_inits.rs  analyzed_lower_implement_blocks.rs  analyzed_lower_lambda_default_inits.rs  analyzed_lower_method_default_inits.rs  analyzed_lower_monomorph_functions.rs  analyzed_lower_test_scoped_type_methods.rs  analyzed_lower_type_method_monomorph.rs  analyzed_lower_type_methods.rs  analyzed_lowering_facade.rs  analyzed_lowering_lookup.rs  callable_registry.rs  calls.rs  coercion_ops.rs  compound_assign.rs  context.rs  entity_view.rs  expr.rs  for_loop.rs  function_registry.rs  generator.rs  interface_vtable.rs  intrinsic_compiler.rs  intrinsics.rs  jit.rs  lambda.rs  lib.rs  loop_analysis.rs  loop_param_opt.rs  match_switch.rs  method_resolution.rs  ops.rs  rc_cleanup.rs  rc_ops.rs  rc_state.rs  (+7 more)
src/crates/vole-identity/: Cargo.toml
src/crates/vole-identity/src/: annotations.rs  entities.rs  function_type.rs  intern.rs  lib.rs  monomorph.rs  namer.rs  primitive_type.rs  resolver.rs  span.rs  symbol.rs  type_id.rs  type_layout.rs  vir_type_id.rs
src/crates/vole-log/: Cargo.toml
src/crates/vole-log/src/: compile_timing.rs  init.rs  lib.rs
src/crates/vole-runtime/: Cargo.toml
src/crates/vole-runtime/src/: alloc_track.rs  array.rs  assert.rs  buffer.rs  builtins.rs  channel.rs  closure.rs  collections.rs  coroutine.rs  instance.rs  iterator.rs  iterator_abi.rs  iterator_backend.rs  iterator_core.rs  iterator_parity.rs  lib.rs  native_registry.rs  scheduler.rs  signal.rs  string.rs  string_builder.rs  task.rs  type_meta_cache.rs  type_registry.rs  value.rs
src/crates/vole-runtime/tests/: corosensei_smoke.rs
src/crates/vole-sema/: Cargo.toml
src/crates/vole-sema/src/: analysis_cache.rs  compilation_db.rs  entity_defs.rs  expression_data.rs  generic.rs  implement_registry.rs  infer.rs  lib.rs  lowering_lookup.rs  memory_kind.rs  node_map.rs  numeric_model.rs  query.rs  resolution.rs  resolve.rs  scope.rs  type_arena.rs  type_display.rs  type_utils.rs  well_known.rs
src/crates/vole-vir/: Cargo.toml
src/crates/vole-vir/src/: builder.rs  calls.rs  entity_metadata.rs  expr.rs  func.rs  implement_dispatch.rs  intrinsics.rs  lib.rs  lower.rs  numeric_model.rs  printer.rs  program.rs  refs.rs  remap.rs  stmt.rs  type_table.rs  types.rs
src/tools/vole-leak/: Cargo.toml
src/tools/vole-leak/src/: main.rs
src/tools/vole-reduce/: Cargo.toml
src/tools/vole-reduce/src/: cli.rs  main.rs  oracle.rs  reducer.rs  span_remove.rs  workspace.rs
src/tools/vole-reduce/tests/: integration.rs
src/tools/vole-snap/: Cargo.toml
src/tools/vole-snap/src/: diff.rs  lib.rs  main.rs  runner.rs  snapshot.rs
src/tools/vole-stress/: Cargo.toml
src/tools/vole-stress/profiles/: closures-heavy.toml  deep-nesting.toml  fallible-heavy.toml  full.toml  generics-heavy.toml  many-modules.toml  minimal.toml  stdlib-heavy.toml  wide-types.toml
src/tools/vole-stress/src/: emit.rs  emitter.rs  entrypoints.rs  expr.rs  main.rs  manifest.rs  names.rs  planner.rs  profile.rs  resolver.rs  rule.rs  scope.rs  stmt.rs  symbols.rs
src/vole/: Cargo.toml  build.rs
src/vole/src/: lib.rs  util.rs
src/vole/src/bench/: mod.rs  runner.rs
src/vole/src/cli/: args.rs  mod.rs  paths.rs
src/vole/src/commands/: bench.rs  check.rs  common.rs  fmt.rs  inspect.rs  mir_format.rs  mod.rs  run.rs  test.rs  version.rs
src/vole/src/errors/: mod.rs  report.rs
src/vole/src/fmt/: config.rs  printer.rs
src/vole/src/snap/: snapshot.rs
src/vole/src/transforms/: generator.rs  mod.rs
src/vole/tests/: cli_shebang.rs
(+1925 files in other folders)
