[package]
name = "vole"
version = "0.1.0"
edition = "2024"
default-run = "vole"
description = "A compiled programming language with JIT compilation via Cranelift"
repository = "https://github.com/pprice/vole"
license = "NONE"
keywords = ["compiler", "programming-language", "jit", "cranelift"]
categories = ["compilers"]
readme = "README.md"

[lib]
name = "vole"
path = "src/lib.rs"

[[bin]]
name = "vole"
path = "src/bin/vole.rs"

[[bin]]
name = "vole-snap"
path = "src/bin/vole_snap.rs"

[dependencies]
# Cranelift for JIT compilation
cranelift = "0.127"
cranelift-jit = "0.127"
cranelift-module = "0.127"
cranelift-codegen = "0.127"
cranelift-frontend = "0.127"
cranelift-native = "0.127"
target-lexicon = "0.13"

# C library interop (for longjmp in test assertions)
libc = "0.2"

# Small vector optimization for hot paths
smallvec = "1.13"

# Fast hashing for internal compiler maps (non-cryptographic)
rustc-hash = "2.1"

# High-performance hash map for Map<K,V> and Set<T> collections
# HashTable provides low-level API for custom equality function injection
hashbrown = "0.16"

# Error handling
thiserror = "2.0"
miette = { version = "7.4", features = ["fancy"] }

# CLI
clap = { version = "4.5.54", features = ["derive", "color"] }

# File globbing for test discovery
glob = "0.3"

# Text diffing for snapshot testing
similar = "2.6"

# Pretty printing for formatter
pretty = "0.12"

# Benchmarking
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
comfy-table = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-ident = "1.0.22"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo"] }
vergen-gitcl = { version = "1", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
# Lint groups - errors for critical issues (lower priority so individual lints can override)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Lint groups - warnings for code quality
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow multiple crate versions - caused by transitive dependencies we don't control
multiple_crate_versions = "allow"

# Additional useful lints
redundant_clone = "warn"
derive_partial_eq_without_eq = "warn"
unused_peekable = "warn"
collection_is_never_read = "warn"
needless_for_each = "warn"
manual_string_new = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"

[lints.rust]
# Standard Rust lints
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
