[workspace]
members = ["src/vole", "src/crates/*", "src/tools/*"]
default-members = ["src/vole", "src/crates/*"]
resolver = "2"

[workspace.package]
version = "2026.2.0"

[workspace.lints.clippy]
# Lint groups - errors for critical issues (lower priority so individual lints can override)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Lint groups - warnings for code quality
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow multiple crate versions - caused by transitive dependencies we don't control
multiple_crate_versions = "allow"

# Allow missing metadata for internal crates
cargo_common_metadata = "allow"

# Additional useful lints
redundant_clone = "warn"
derive_partial_eq_without_eq = "warn"
unused_peekable = "warn"
collection_is_never_read = "warn"
needless_for_each = "warn"
manual_string_new = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"

[workspace.lints.rust]
# Standard Rust lints
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.release-local]
inherits = "release"
panic = "unwind"
strip = false
