[package]
name = "vole-frontend"
version = "0.1.0"
edition = "2024"
description = "Lexer, parser, and AST for the Vole programming language"

[dependencies]
# Small vector optimization for hot paths
smallvec = "1.13"

# Fast hashing for internal compiler maps (non-cryptographic)
rustc-hash = "2.1"

# Error handling
thiserror = "2.0"
miette = { version = "7.4", features = ["fancy"] }

# Unicode identifier support
unicode-ident = "1.0.22"

# Tracing for debug output
tracing = "0.1"

[lints]
workspace = true
