[package]
name = "vole"
version = "0.1.0"
edition = "2024"
default-run = "vole"
description = "A compiled programming language with JIT compilation via Cranelift"
repository = "https://github.com/pprice/vole"
license = "NONE"
keywords = ["compiler", "programming-language", "jit", "cranelift"]
categories = ["compilers"]
readme = "../../README.md"

[lib]
name = "vole"
path = "src/lib.rs"

[[bin]]
name = "vole"
path = "src/bin/vole.rs"

[[bin]]
name = "vole-snap"
path = "src/bin/vole_snap.rs"

[dependencies]
# Workspace crates
vole-frontend = { path = "../crates/vole-frontend" }
vole-identity = { path = "../crates/vole-identity" }
vole-runtime = { path = "../crates/vole-runtime" }
vole-sema = { path = "../crates/vole-sema" }
vole-codegen = { path = "../crates/vole-codegen" }

# C library interop (for benchmark resource usage)
libc = "0.2"

# Error handling
miette = { version = "7.4", features = ["fancy"] }

# CLI
clap = { version = "4.5.54", features = ["derive", "color"] }

# File globbing for test discovery
glob = "0.3"

# Text diffing for snapshot testing
similar = "2.6"

# Pretty printing for formatter
pretty = "0.12"

# Benchmarking
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
comfy-table = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo"] }
vergen-gitcl = { version = "9", features = ["build"] }

[lints]
workspace = true
