[package]
name = "vole"
version = "0.1.0"
edition = "2024"
default-run = "vole"
description = "A compiled programming language with JIT compilation via Cranelift"
repository = "https://github.com/pprice/vole"
license = "NONE"
keywords = ["compiler", "programming-language", "jit", "cranelift"]
categories = ["compilers"]
readme = "../../README.md"

[lib]
name = "vole"
path = "src/lib.rs"

[[bin]]
name = "vole"
path = "src/bin/vole.rs"

[dependencies]
# Workspace crates
vole-frontend = { path = "../crates/vole-frontend" }
vole-fmt = { path = "../crates/vole-fmt" }
vole-identity = { path = "../crates/vole-identity" }
vole-runtime = { path = "../crates/vole-runtime" }
vole-sema = { path = "../crates/vole-sema" }
vole-codegen = { path = "../crates/vole-codegen" }

# Error handling
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"

# CLI
clap = { version = "4.5.54", features = ["derive", "color"] }

# File globbing for test discovery
glob = "0.3"

# Benchmarking (optional, feature-gated)
libc = { version = "0.2", optional = true }
sysinfo = { version = "0.37", default-features = false, features = ["system"], optional = true }
comfy-table = { version = "7.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Tracing/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
terminal_size = "0.4.3"

[features]
default = ["bench"]
bench = ["dep:libc", "dep:sysinfo", "dep:comfy-table", "dep:serde", "dep:serde_json"]

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo"] }
vergen-gitcl = { version = "9", features = ["build"] }

[lints]
workspace = true
