[package]
name = "vole-codegen"
version.workspace = true
edition = "2024"
description = "Code generation for the Vole programming language (Cranelift JIT)"

[dependencies]
# Workspace crates
vole-frontend = { path = "../vole-frontend" }
vole-identity = { path = "../vole-identity" }
vole-runtime = { path = "../vole-runtime" }
vole-sema = { path = "../vole-sema" }

# Cranelift for JIT compilation
cranelift = "0.127"
cranelift-jit = "0.127"
cranelift-module = "0.127"
cranelift-codegen = "0.127"
cranelift-native = "0.127"

# Error handling and diagnostics
miette = "7.4"
thiserror = "2.0"

# Fast hashing for internal compiler maps (non-cryptographic)
rustc-hash = "2.1"

# Small vector optimization
smallvec = "1.13"

# Identifier concatenation for macros
paste = "1.0"

# Tracing/observability
tracing = "0.1"

[lints]
workspace = true
