[package]
name = "vole-codegen"
version.workspace = true
edition = "2024"
description = "Code generation for the Vole programming language (Cranelift JIT)"

[dependencies]
# Workspace crates
vole-identity = { path = "../vole-identity" }
vole-log = { path = "../vole-log" }
vole-runtime = { path = "../vole-runtime" }
vole-vir = { path = "../vole-vir" }

# Cranelift for JIT compilation
cranelift = "0.129"
cranelift-jit = "0.129"
cranelift-module = "0.129"
cranelift-codegen = "0.129"
cranelift-native = "0.129"

# Error handling and diagnostics
miette = "7.4"
thiserror = "2.0"

# Fast hashing for internal compiler maps (non-cryptographic)
rustc-hash = "2.1"

# Small vector optimization
smallvec = "1.13"

# Identifier concatenation for macros
paste = "1.0"

# Tracing/observability
tracing = "0.1"

[lints]
workspace = true
