[package]
name = "vole-identity"
version = "0.1.0"
edition = "2024"
description = "Name identity system for the Vole programming language"

[dependencies]
# Workspace crates
vole-frontend = { path = "../vole-frontend" }

# High-performance hash map
rustc-hash = "2.1"
# raw_entry API for zero-allocation name lookups
hashbrown = "0.16.1"

[lints]
workspace = true
