[package]
name = "vole-identity"
version.workspace = true
edition = "2024"
description = "Name identity system for the Vole programming language"

[dependencies]
# Error reporting (for Span -> SourceSpan conversions)
miette = "7.4"

# High-performance hash map
rustc-hash = "2.1"
# raw_entry API for zero-allocation name lookups
hashbrown = "0.16.1"

[features]
testing = []

[lints]
workspace = true
