[package]
name = "vole-log"
version.workspace = true
edition = "2024"
description = "Compiler timing and logging infrastructure for the Vole programming language"

[dependencies]
# Tracing for span-based instrumentation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-chrome = "0.7.2"

[lints]
workspace = true
