[package]
name = "vole-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime library for the Vole programming language"

[dependencies]
# C library interop (for longjmp in test assertions)
libc = "0.2"

# Macro for concatenating identifiers (used in to_string_ffi! macro)
paste = "1"

# High-performance hash map for Map<K,V> and Set<T> collections
hashbrown = "0.16"

# High-performance hash map for internal registries
rustc-hash = "2.1"

# Random number generation for std:random module
rand = "0.8"

# Cryptographic hashing for std:crypto/hash module
sha2 = "0.10"

# Date/time handling for std:time module
chrono = "0.4"

[dev-dependencies]
# Temporary files and directories for tests
tempfile = "3"

[lints]
workspace = true
