[package]
name = "vole-sema"
version.workspace = true
edition = "2024"
description = "Semantic analysis for the Vole programming language"

[dependencies]
# Workspace crates
vole-frontend = { path = "../vole-frontend" }
vole-identity = { path = "../vole-identity" }
vole-log = { path = "../vole-log" }
vole-vir = { path = "../vole-vir" }

# Small vector optimization for hot paths
smallvec = "1.13"

# Fast hashing for internal compiler maps (non-cryptographic)
rustc-hash = "2.1"

# Direct hashbrown for raw_entry API (pre-computed hashes in scope undo)
hashbrown = "0.16"

# Error handling
thiserror = "2.0"
miette = { version = "7.4", features = ["fancy"] }

# Tracing/observability
tracing = "0.1"

# Parallel parsing
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
vole-frontend = { path = "../vole-frontend", features = ["testing"] }

[lints]
workspace = true
