[package]
name = "vole-vir"
version.workspace = true
edition = "2024"
description = "Vole Intermediate Representation — typed IR between sema and codegen"

[dependencies]
# Workspace crates
vole-identity = { path = "../vole-identity" }

# Identifier concatenation for macros (used by define_int_op_enum)
paste = "1.0"

[lints]
workspace = true
