[package]
name = "vole-reduce"
version = "0.1.0"
edition = "2024"
description = "Test case minimizer for Vole compiler bugs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
regex = "1"
vole-frontend = { path = "../../crates/vole-frontend" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
