[package]
name = "vole-stress"
version = "0.1.0"
edition = "2024"
description = "Generate synthetic Vole codebases for benchmarking"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vole-fmt = { path = "../../crates/vole-fmt" }

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo"] }
vergen-gitcl = { version = "9", features = ["build"] }

[lints]
workspace = true
